[metadata]
name = pimera
version = attr: pimera.__version__
description = Raspberry Pi USB Multi-Tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Trevor Bergeron
author_email = pimera@sec.gd
url = https://github.com/half-duplex/pimera
license = TBD
classifiers =
    Development Status :: 4 - Beta

[options]
python_requires = >=3.7, <4
packages = find:
install_requires =
    spidev

[options.extras_require]
dev =
    black
    flake8
    flake8-coding
    flake8-import-order

[options.entry_points]
console_scripts =
    pimera = pimera.cli:main

[flake8]
max-line-length = 99
import-order-style = google
exclude =
    venv/*
    env/*
accept-encodings = utf-8
